--- a/job-portal/apply.html
+++ b/job-portal/apply.html
@@ -15,6 +15,7 @@
   <button class="btn">Submit</button>
 </form>
 
-<script src="js/script.js"></script>
+<script src="./js/script.js"></script>
+
 </body>
 </html>
