--- a/job-portal/jobs.html
+++ b/job-portal/jobs.html
@@ -11,7 +11,7 @@
 <input type="text" id="search" placeholder="Search job..." onkeyup="filterJobs()">
 
 <div id="jobList"></div>
+<script src="./js/script.js"></script>
 
-<script src="js/script.js"></script>
 </body>
 </html>
