--- a/job-portal/login.html
+++ b/job-portal/login.html
@@ -14,6 +14,7 @@
   <button class="btn">Login</button>
 </form>
 
-<script src="js/script.js"></script>
+<script src="./js/script.js"></script>
+
 </body>
 </html>
