--- a/job-portal/register.html
+++ b/job-portal/register.html
@@ -22,6 +22,9 @@
   <button class="btn">Register</button>
 </form>
 
-<script src="js/script.js"></script>
+<script src="./js/script.js"></script>
+
+
+
 </body>
 </html>
