--- a/job-portal/index.html
+++ b/job-portal/index.html
@@ -21,7 +21,8 @@
   <input type="text" placeholder="Search jobs...">
   <br><br>
   <a class="btn" href="jobs.html">Find Jobs</a>
-  <a class="btn secondary" href="register.html">Post a Job</a>
+  <a class="btn secondary" href="post-job.html">Post a Job</a>
+
 </div>
 
 </body>
