--- a/job-portal/index.html
+++ b/job-portal/index.html
@@ -8,13 +8,19 @@
 
 <nav>
   <h2>Job Portal</h2>
-  <ul>
+
+  <div class="menu-icon" onclick="toggleMenu()">
+    ☰
+  </div>
+
+  <ul id="menu">
     <li><a href="index.html">Home</a></li>
     <li><a href="jobs.html">Jobs</a></li>
     <li><a href="login.html">Login</a></li>
     <li><a href="register.html">Register</a></li>
   </ul>
 </nav>
+
 
 <div class="hero">
   <h1>Find Your Dream Job</h1>
