--- a/job-portal/index.html
+++ b/job-portal/index.html
@@ -26,8 +26,10 @@
   <h1>Find Your Dream Job</h1>
   <input type="text" placeholder="Search jobs...">
   <br><br>
-  <a class="btn" href="jobs.html">Find Jobs</a>
-  <a class="btn secondary" href="post-job.html">Post a Job</a>
+  <a class="btn" href="jobs.html" onclick="checkLogin()">Find Jobs</a>
+
+  <a class="btn" href="jobs.html" onclick="checkLogin()">Find Jobs</a>
+
 
 </div>
 
