--- a/job-portal/apply.html
+++ b/job-portal/apply.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 
-<h2>Apply For Job</h2>
+<!-- <h2>Apply For Job</h2> -->
 
 <form onsubmit="applyJob()">
+<h2>Apply For Job</h2>
+
   <input type="text" placeholder="Name"><br>
   <input type="email" placeholder="Email"><br>
   <input type="file"><br>
