--- a/job-portal/index.html
+++ b/job-portal/index.html
@@ -4,6 +4,8 @@
 <html>
 <head>
   <title>Job Portal</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -29,7 +31,7 @@
   <button class="btn secondary" onclick="goToPostJob()">Post a Job</button>
 </div>
 
-<!-- Script must be here -->
+
 <script src="js/script.js"></script>
 
 </body>
