--- a/job-portal/post-job.html
+++ b/job-portal/post-job.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Post Job</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
