--- a/job-portal/jobs.html
+++ b/job-portal/jobs.html
@@ -8,9 +8,11 @@
 </head>
 <body>
 
-<h2>Available Jobs</h2>
+<!-- <h2>Available Jobs</h2> -->
 
 <input type="text" id="search" placeholder="Search job..." onkeyup="filterJobs()">
+<h2>Available Jobs</h2>
+
 
 <div id="jobList"></div>
 <script src="./js/script.js"></script>
