--- a/job-portal/index.html
+++ b/job-portal/index.html
@@ -17,7 +17,9 @@
 
   <ul id="menu">
     <li><a href="index.html">Home</a></li>
-    <li><a href="jobs.html">Jobs</a></li>
+    <!-- <li><a href="jobs.html">Jobs</a></li> -->
+     <li><a href="#" onclick="goToJobs()">Jobs</a></li>
+
     <li><a href="login.html">Login</a></li>
     <li><a href="register.html">Register</a></li>
   </ul>
