--- a/job-portal/index.html
+++ b/job-portal/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <nav>
-  <h2>Job Portal</h2>
+  <h2>Search a job</h2>
 
   <div class="menu-icon" onclick="toggleMenu()">☰</div>
 
@@ -32,6 +32,17 @@
   <button class="btn" onclick="goToJobs()">Find Jobs</button>
   <button class="btn secondary" onclick="goToPostJob()">Post a Job</button>
 </div>
+<br>
+<br><br><br><br><br><br><br><br><br>
+<h2>BUILD YOUR FUTURE HERE</h2>
+<!-- <br><br><br><br><br><br><br><br><br> -->
+<footer class="footer">
+  © 2026 Job Portal | Designed & Developed by Dakuri Shiva Sai
+</footer>
+
+
+<!-- <h6>Copy right @DAKURI SHIVA SAI</h6> -->
+
 
 
 <script src="js/script.js"></script>
